--- a/oioioi/programs/static/common/programs.scss
+++ b/oioioi/programs/static/common/programs.scss
@@ -28,6 +28,6 @@
 
 .submission-admin {
   display: block;
-  padding: ($spacer * .30);
-  margin: (-$spacer * .30);
+  padding: ($spacer * .5);
+  margin: (-$spacer * .5);
 }
